# StereoBinauraliser

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  module_common.cmake  vcpkg.json
client/: CMakeLists.txt
client/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
client/src/relays/: HeadTrackingRelay.cpp  HeadTrackingRelay.h  ParameterRelay.cpp  ParameterRelay.h
client/ui/: package-lock.json  package.json
client/ui/src/: main.tsx
client/ui/src/components/knob/: knob_base.tsx  knob_base_thumb.tsx
client/ui/src/components/toggle_button/: ToggleButton.tsx  index.tsx
client/ui/src/components/tv_knob/: index.tsx  tv_knob_base.tsx  tv_knob_base_thumb.tsx
client/ui/src/hooks/: use_headtracking.ts
client/ui/src/ipc/: headtracking_ipc.ts
client/ui/src/lib/: parameters.ts
client/ui/src/pages/: head_tracking_panel.tsx  root.tsx
client/ui/src/styles/: globals.css
modules/: CMakeLists.txt
modules/model/: CMakeLists.txt
modules/model/src/model/: ParameterTree.cpp  ParameterTree.h
modules/movingaverage/: CMakeLists.txt
modules/movingaverage/src/movingaverage/: MovingAverage.cpp  MovingAverage.h
modules/movingaverage/src/utils/: CircularBuffer.cpp  CircularBuffer.h
modules/sofa_renderer/: CMakeLists.txt
modules/sofa_renderer/src/sofa_renderer/: SofaDodecRenderer.h  SofaFilter.cpp  SofaFilter.h  SofaRenderer.cpp  SofaRenderer.h  SofaStereoRenderer.cpp  SofaStereoRenderer.h  TimeVaryingConvolver.cpp  TimeVaryingConvolver.h
modules/udp_receiver/: CMakeLists.txt
modules/udp_receiver/src/udp_receiver/: UDPReceiver.cpp  UDPReceiver.h
source/: PluginEditor.cpp  PluginEditor.h
